--- a/frontend-dart/Dockerfile
+++ b/frontend-dart/Dockerfile
@@ -1,23 +1,33 @@
-# Use Dart's official base image
-FROM dart:stable
+# Usa una versione specifica di Dart (2.18)
+FROM dart:stable AS build
 
-# Set working directory
+# Imposta la directory di lavoro
 WORKDIR /app
 
-# Copy Dart source files
-COPY . .
+# Copia il file pubspec.yaml nella directory di lavoro
+COPY pubspec.yaml .
 
-# Get dependencies
+# Installa le dipendenze
 RUN dart pub get
 
-# Build the Flutter web app
-RUN dart pub global activate webdev && webdev build --output web:build
+# Copia il codice sorgente nella directory di lavoro
+COPY lib lib/
+COPY web web/
 
-# Use a lightweight web server (like dhttpd) to serve the app
-RUN dart pub global activate dhttpd
+# Compila il progetto Dart in JavaScript per il web
+RUN dart compile js -o build/web/main.dart.js lib/main.dart
 
-# Expose port 8082
-EXPOSE 8082
+# Usa Nginx per servire il contenuto
+FROM nginx:alpine
 
-# Serve the built app
-CMD ["dhttpd", "--path", "build", "--port", "8082"]
+# Copia il file di configurazione Nginx
+COPY nginx.conf /etc/nginx/nginx.conf
+
+# Copia i file compilati dal container di build nel container di produzione
+COPY --from=build /app/build/web /usr/share/nginx/html
+
+# Esponi la porta 80 per il server web
+EXPOSE 80
+
+# Avvia Nginx in modalità non demonizzata
+CMD ["nginx", "-g", "daemon off;"]
