--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,20 +7,32 @@ services:
       - "8080:8080"
     networks:
       - app-network
-
-  backend-go:
-    build:
-      context: ./backend-go
-    ports:
-      - "8081:8081"
-    networks:
-      - app-network
+#
+ # backend-go:
+  #  build:
+   #   context: ./backend-go
+   # ports:
+   #   - "8081:8081"
+   # networks:
+   #   - app-network
 
   frontend-dart:
     build:
       context: ./frontend-dart
     ports:
       - "8082:8082"
+    networks:
+      - app-network
+
+  nginx:
+    image: nginx:latest
+    container_name: nginx
+    build:
+      context: ./nginx
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
     networks:
       - app-network
 
