--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,21 +20,12 @@ services:
     build:
       context: ./frontend-dart
     ports:
-      - "8082:8082"
+      - "8082:80"
+    volumes:
+        - ./frontend-dart:/usr/share/nginx/html
     networks:
       - app-network
 
-  nginx:
-    image: nginx:latest
-    container_name: nginx
-    build:
-      context: ./nginx
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-    networks:
-      - app-network
 
 networks:
   app-network:
