--- a/frontend-dart/nginx.conf
+++ b/frontend-dart/nginx.conf
@@ -1,27 +1,39 @@
+events {
+    worker_connections 1024;  
+}
+
 http {
     server {
         listen 80;
         server_name localhost;
 
-        root /usr/share/nginx/html;
-        index index.html;
-
-        location / {
-            try_files $uri $uri/ /index.html;
-        }
-
-        location ~* \.(?:css|js|woff2|woff|ttf|eot|svg|otf|png|jpg|jpeg|gif|ico)$ {
+        # Caching per file statici
+        location ~* \.(css|js|woff2|woff|ttf|eot|svg|otf|png|jpg|jpeg|gif|ico)$ {
+            alias /usr/share/nginx/html/web/;
             expires 1y;
             add_header Cache-Control "public, immutable";
         }
+        
+        location / {
+            root /usr/share/nginx/html/web;
+            try_files $uri $uri/ /index.html;
+        }
 
-        location /api/java/ {
-            proxy_pass http://backend-java:8080/;
+
+        # Proxy alla parte backend /java
+        location /java {
+            proxy_pass http://backend-java:8080/api/java;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
+        # Gzip per ottimizzazione
+        gzip on;
+        gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+        gzip_min_length 256;
+
+        # Error Pages
         error_page 404 /404.html;
         location = /404.html {
             root /usr/share/nginx/html;
@@ -31,5 +43,14 @@ http {
         location = /50x.html {
             root /usr/share/nginx/html;
         }
+
+        # Header di sicurezza
+        add_header X-Content-Type-Options nosniff;
+        add_header X-Frame-Options SAMEORIGIN;
+        add_header X-XSS-Protection "1; mode=block";
     }
+
+    # Log
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
 }
