--- a/frontend-dart/nginx.conf
+++ b/frontend-dart/nginx.conf
@@ -7,20 +7,20 @@ http {
         listen 80;
         server_name localhost;
 
-        # Caching per file statici
-        location ~* \.(css|js|woff2|woff|ttf|eot|svg|otf|png|jpg|jpeg|gif|ico)$ {
-            alias /usr/share/nginx/html/web/;
-            expires 1y;
-            add_header Cache-Control "public, immutable";
+        location ~* \.(css|js|ico|png|jpg|jpeg|gif|woff2?|eot|ttf|svg|map)$ {
+            root /usr/share/nginx/html/web; 
+            try_files $uri =404;
+            access_log off;
+            add_header Cache-Control "public, max-age=31536000, immutable";
         }
         
+        root /usr/share/nginx/html/web;
+        index index.html;
+    
         location / {
-            root /usr/share/nginx/html/web;
             try_files $uri $uri/ /index.html;
         }
-
-
-        # Proxy alla parte backend /java
+        
         location /java {
             proxy_pass http://backend-java:8080/api/java;
             proxy_set_header Host $host;
@@ -28,12 +28,6 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
-        # Gzip per ottimizzazione
-        gzip on;
-        gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
-        gzip_min_length 256;
-
-        # Error Pages
         error_page 404 /404.html;
         location = /404.html {
             root /usr/share/nginx/html;
