--- a/frontend-dart/nginx.conf
+++ b/frontend-dart/nginx.conf
@@ -3,22 +3,33 @@ events {
 }
 
 http {
+
+    types {
+        text/css css;  
+        text/javascript js;
+        application/json json;
+        text/html html; 
+    }
+    
     server {
         listen 80;
         server_name localhost;
 
-        location ~* \.(css|js|ico|png|jpg|jpeg|gif|woff2?|eot|ttf|svg|map)$ {
-            root /usr/share/nginx/html/web; 
-            try_files $uri =404;
-            access_log off;
-            add_header Cache-Control "public, max-age=31536000, immutable";
-        }
-        
+        location ~* \.(css|js|jpg|jpeg|png|gif|svg|woff|woff2|ttf)$ {
+            root /usr/share/nginx/html/web;
+            expires 30d;  # Mantieni in cache per 30 giorni
+            add_header Cache-Control "public, no-transform";
+        }  
         root /usr/share/nginx/html/web;
         index index.html;
     
         location / {
             try_files $uri $uri/ /index.html;
+        }
+        
+        location /style.css {
+            add_header Cache-Control "public, max-age=31536000";  # 1 anno
+            try_files $uri =404;
         }
         
         location /java {
@@ -38,6 +49,12 @@ http {
             root /usr/share/nginx/html;
         }
 
+        gzip on;
+        gzip_types text/plain text/css application/javascript application/json application/xml text/javascript application/xml+rss text/javascript;
+        gzip_min_length 1000;
+        gzip_comp_level 6;
+        gzip_http_version 1.1;
+        
         # Header di sicurezza
         add_header X-Content-Type-Options nosniff;
         add_header X-Frame-Options SAMEORIGIN;
