--- a/frontend-dart/nginx.conf
+++ b/frontend-dart/nginx.conf
@@ -32,13 +32,15 @@ http {
             try_files $uri =404;
         }
         
-        location /java {
-            proxy_pass http://backend-java:8080/api/java;
+
+        location ~ ^/api/java {
+            proxy_pass http://backend-java:8080;  
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
-
+        
         error_page 404 /404.html;
         location = /404.html {
             root /usr/share/nginx/html;
