--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,14 +8,15 @@ services:
       - "8080:8080"
     networks:
       - app-network
-#
- # backend-go:
-  #  build:
-   #   context: ./backend-go
-   # ports:
-   #   - "8081:8081"
-   # networks:
-   #   - app-network
+
+  backend-go:
+    build:
+      context: ./backend-go
+    container_name: backendGoContainer 
+    ports:
+      - "8081:8080"
+    networks:
+      - app-network
 
   frontend-dart:
     build:
