--- a/frontend-dart/nginx.conf
+++ b/frontend-dart/nginx.conf
@@ -40,7 +40,23 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
+
+        location ~ ^/api/go {
+            proxy_pass http://backend-java:8081;  
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
         
+        location ~ ^/api/go {
+            proxy_pass http://backend-java:8081;  
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
         error_page 404 /404.html;
         location = /404.html {
             root /usr/share/nginx/html;
