fixed gallery refresh

--- a/frontend-dart/nginx.conf
+++ b/frontend-dart/nginx.conf
@@ -15,23 +15,29 @@ http {
         listen 80;
         server_name localhost;
 
-        location ~* \.(css|js|jpg|jpeg|png|gif|svg|woff|woff2|ttf)$ {
+        location ~* \.(jpg|jpeg|png|gif|svg|woff|woff2|ttf)$ {
             root /usr/share/nginx/html/web;
-            expires 30d;  # Mantieni in cache per 30 giorni
+            expires 30d;
             add_header Cache-Control "public, no-transform";
         }  
-        root /usr/share/nginx/html/web;
-        index index.html;
+
+        location ~* \.(css|dart)$ {
+            root /usr/share/nginx/html/web;
+            expires off;
+            add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate";
+        }
+
     
         location / {
-            try_files $uri $uri/ /index.html;
+            root /usr/share/nginx/html/web;
+            index index.html;
+            add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate";
         }
-        
+
         location /style.css {
-            add_header Cache-Control "public, max-age=31536000";  # 1 anno
+            add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate";
             try_files $uri =404;
         }
-        
 
         location ~ ^/api/java {
             proxy_pass http://backend-java:8080;  
