--- a/frontend-dart/nginx.conf
+++ b/frontend-dart/nginx.conf
@@ -13,6 +13,7 @@ http {
     
     server {
         listen 80;
+        listen [::]:80;
         server_name localhost;
 
         location ~* \.(jpg|jpeg|png|gif|svg|woff|woff2|ttf)$ {
@@ -33,6 +34,7 @@ http {
             index index.html;
             add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate";
         }
+    
 
         location /style.css {
             add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate";
@@ -74,7 +76,7 @@ http {
         }
 
         gzip on;
-        gzip_types text/plain text/css application/javascript application/json application/xml text/javascript application/xml+rss text/javascript;
+        gzip_types text/plain text/css application/javascript application/json application/xml  application/xml+rss;
         gzip_min_length 1000;
         gzip_comp_level 6;
         gzip_http_version 1.1;
